app/assets/stylesheets/base.css
/* ... */
.form-adv-search .select-pane .thumb .end,
.form-adv-search .select-pane .thumb {
  background-color: #e07a02;
}

.form-adv-search .select-pane .scrollbar {
  position: relative;
  float: right;
  width: 5px;
}

.form-adv-search .select-pane .track {
  position: relative;
  width: 5px;
  height: 100%;
  background-color: #eee;
}

.form-adv-search .select-pane .thumb {
  position: absolute;
  top: 0;
  width: 5px;
  height: 20px;
  overflow: hidden;
  cursor: pointer;
}

.form-adv-search .select-pane .thumb .end {
  width: 5px;
  height: 5px;
  overflow: hidden;
}

.form-adv-search .select-pane .disable {
  display: none;
}

.form-adv-search .clearfix {
  clear: both;
}
.forgot-password-form #reset-username{
    margin-bottom: 0;
    margin-right: 10px;
}

body > .alert {
    display: none;
}

h2.center{
    background: none !important;
    color: #999 !important;
    text-align: center;
}

.navbar .btn-navbar{
    padding: 7px 10px;
}
.navbar .btn-navbar .icon-bar {
    display: block;
    width: 18px;
    height: 2px;
    background-color: #f5f5f5;
    padding: 0;
}
.btn-navbar .icon-bar + .icon-bar {
    margin-top: 3px;
}

.nav li a{
    font-size: 16px;
    text-indent: 10px;
}
.navbar .btn-navbar {
    display: none;
}

.navbar-inverse .nav-collapse .nav > li a{
    padding: 0 15px;
    text-indent: 0;
}
.navbar-inverse .nav-collapse .dropdown > a{
    padding-right: 35px !important;
}
.navbar-inverse .nav-collapse .nav > li li{
    width: 100%;
}
.navbar-inverse .nav-collapse .nav > li > a,
.navbar-inverse .nav-collapse .dropdown-menu a {
    color: #ffffff;
    background: #f8941e;
}
.navbar-inverse .nav-collapse .dropdown-menu a{
    padding-left: 0;
    margin-left: 0;
}
.navbar-inverse .nav-collapse .dropdown-menu a:hover {
    color: #f8941e;
    background-color: #fbead4;
}
.nav-collapse .dropdown-menu{
    padding: 0;
}

